added header to index.html. Added media query for nav-brand to make it mobile friendly

--- a/index.html
+++ b/index.html
@@ -66,10 +66,16 @@
             </div>
         </nav>
         <!-- Navbar End-->
+        <!-- Hero image-->
+        <div class="container-fluid hero-image index-hero-image">
+            <div class="opaque-overlay">
+                <h1 class="index-hero-text">KENDRICK LAMAR</h1>
+            </div>
+        </div>
     </header>
-    <section>
+    <main>
 
-    </section>
+    </main>
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
