added header to music page

--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
             </div>
         </nav>
         <!-- Navbar End-->
-        <!-- Hero image-->
+        <!-- Hero image start-->
         <div class="container-fluid hero-image index-hero-image">
             <div class="opaque-overlay">
                 <h1 class="index-hero-text">KENDRICK LAMAR</h1>
             </div>
         </div>
+        <!-- Hero image end-->
     </header>
     <main>
 
