Added Tour page header

--- a/tour.html
+++ b/tour.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    <!-- Navbar Start-->
     <header>
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
@@ -64,6 +65,14 @@
                 </ul>
             </div>
         </nav>
+        <!-- Navbar End-->
+        <!-- Hero image start-->
+        <div class="container-fluid hero-image tour-hero-image">
+            <div class="opaque-overlay">
+                <h1 class="index-hero-text">TOUR</h1>
+            </div>
+        </div>
+        <!-- Hero image end-->
     </header>
     <section>
 
