--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
 
 <body>
     <header>
+        <!-- Navbar Start-->
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -65,6 +66,14 @@
                 </ul>
             </div>
         </nav>
+        <!-- Navbar End-->
+        <!-- Hero image Start-->
+        <div class="container-fluid hero-image contact-hero-image">
+            <div class="opaque-overlay">
+                <h1 class="index-hero-text">CONTACT US</h1>
+            </div>
+        </div>
+        <!-- Hero image end-->
     </header>
     <section>
 
