--- a/index.html
+++ b/index.html
@@ -27,17 +27,6 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
     <!-- Page Title-->
-    <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-
     <title>Kendrick Lamar</title>
 </head>
 
@@ -86,8 +75,44 @@
         <!-- Hero image end-->
     </header>
     <main>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6">
+                    <p class="general-content">Welcome to the home of TDE's Kendrick Lamar, One of the most influential
+                        artists of his
+                        generation known for his lyricism amazing delivery and ability to convey the deepest of messages
+                        in his music.</p>
+                    <a href="about.html" class="btn btn-info" role="button">LEARN MORE</a>
+                </div>
+                <div class="col-sm-6">
+                    <img class="studio-index" src="/assets/images/studio-index.jpg" alt="Kendrick Lamar in studio">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <img class="heart-5-index" src="/assets/images/heart-5-index.jpg" alt="Logo for new single heart V">
+                    <br>
+                    <h3 class="subtitle-1">THE HEART V</h3>
+                    <br>
+                    <h4 class="subtitle-2">RELEASE DATE TO BE ANNOUNCED</h4>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-7">
+                    <iframe class="index-video" width="560" height="315" src="https://www.youtube.com/embed/drV0QatqbRU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-5">
+                    <h3 class="subtitle-1">Kendrick Lamar - These Walls (Explicit) ft. Bilal, Anna Wise, Thundercat</h3>
+                </div>
+            </div>
+        </div>
 
     </main>
+    <!-- Social links footer Start-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
@@ -129,6 +154,8 @@
             </div>
         </div>
     </footer>
+
+    <!-- Social links footer End-->
 </body>
 
 </html>
