added content,classes, css and images for music page.

--- a/music.html
+++ b/music.html
@@ -11,15 +11,6 @@
     <!-- Latest compiled and minified CSS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- jQuery library - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Popper JS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-    <!-- Latest compiled JavaScript - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
     <!-- Font Awesome - https://fontawesome.com/ -->
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
@@ -33,12 +24,12 @@
 <body>
     <header>
         <!-- Navbar Start-->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
@@ -74,9 +65,131 @@
         </div>
         <!-- Hero image end-->
     </header>
-    <section>
-
-    </section>
+    <main>
+        <div class="container-fluid spanish-grey-bg">
+            <div class="row align-items-center">
+                <div class="col-md-4 justify-content-center">
+                    <img class="album-covers" src="assets/images/bp-album.jpg" alt="Black Panther album cover" />
+                </div>
+                <div class="col-md-8 ">
+                    <h3 class="subtitle-1 album-title">Black Panther The Album Music From And Inspired By</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="tracklist ">
+                                <li>1 Black Panther</li>
+                                <li>2 All The Stars (with SZA)</li>
+                                <li>3 X (with 2 Chainz & Saudi)</li>
+                                <li>4 The Ways (with Swae Lee)</li>
+                                <li>5 Opps (with Yugen Blakrok) </li>
+                                <li>6 I Am</li>
+                                <li>7 Paramedic!</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="tracklist">
+                                <li>8 Bloody Waters (with Anderson .Paak & James Blake)</li>
+                                <li>9 King's Dead (with Kendrick Lamar, Future & James Blake)</li>
+                                <li>10 Redemption Interlude</li>
+                                <li>11 Redemption (with Babes Wodumo)</li>
+                                <li>12 Seasons (with Sjava & Reason)</li>
+                                <li>13 Big Shot (with Travis Scott)</li>
+                                <li>14 Pray For Me (with Kendrick Lamar)</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="welcome"><a href="about.html" class="btn info-button" role="button">Buy/Stream</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid silver-sand-bg">
+            <div class="row align-items-center">
+                <div class="col-md-4 justify-content-center">
+                    <img class="album-covers" src="assets/images/damn-album.jpeg" alt="DAMN Album Cover" />
+                </div>
+                <div class="col-md-8 ">
+                    <h3 class="subtitle-1 album-title">DAMN. COLLECTORS EDITION.</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="tracklist ">
+                                <li>1 DUCKWORTH.</li>
+                                <li>2 GOD.</li>
+                                <li>3 FEAR.</li>
+                                <li>4 XXX. FEAT. U2.</li>
+                                <li>5 LOVE. FEAT. ZACARI.</li>
+                                <li>6 LUST.</li>
+                                <li>7 HUMBLE.</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="tracklist">
+                                <li>8 PRIDE.</li>
+                                <li>9 LOYALTY. FEAT. RIHANNA.</li>
+                                <li>10 FEEL.</li>
+                                <li>11 ELEMENT.</li>
+                                <li>12 YAH.</li>
+                                <li>13 DNA.</li>
+                                <li>14 BLOOD.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="welcome"><a href="about.html" class="btn info-button" role="button">Buy/Stream</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid spanish-grey-bg">
+            <div class="row align-items-center">
+                <div class="col-md-4 justify-content-center">
+                    <img class="album-covers" src="assets/images/tpab-album.jpg"
+                        alt="To Pimp A Butterfly Album Cover" />
+                </div>
+                <div class="col-md-8 ">
+                    <h3 class="subtitle-1 album-title">To Pimp A Butterfly</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="tracklist ">
+                                <li>1 Wesley's Theory</li>
+                                <li>2 For Free? - Interlude</li>
+                                <li>3 King Kunta</li>
+                                <li>4 Institutionalized</li>
+                                <li>5 These Walls</li>
+                                <li>6 u</li>
+                                <li>7 Alright</li>
+                                <li>8 Bloody Waters (with Anderson .Paak & James Blake)</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="tracklist">
+                                <li>9 Momma</li>
+                                <li>11 How Much A Dollar Cost</li>
+                                <li>12 Complexion (A Zulu Love)</li>
+                                <li>13 The Blacker The Berry</li>
+                                <li>14 You Ain't Gotta Lie (Momma Said)</li>
+                                <li>15 i</li>
+                                <li>16 Mortal Man</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="welcome"><a href="about.html" class="btn info-button" role="button">Buy/Stream</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Social links footer Start-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
@@ -117,7 +230,16 @@
                 </a>
             </div>
         </div>
+        <!-- Social links footer End-->
     </footer>
+    <!-- jQuery library - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
