Added content/images for image screen and added sizing for desktop and mobile viewing

--- a/photos.html
+++ b/photos.html
@@ -11,15 +11,6 @@
     <!-- Latest compiled and minified CSS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- jQuery library - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Popper JS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-    <!-- Latest compiled JavaScript - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
     <!-- Font Awesome - https://fontawesome.com/ -->
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
@@ -33,12 +24,12 @@
 <body>
     <header>
         <!-- Navbar Start-->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
@@ -74,9 +65,65 @@
         </div>
         <!-- Hero image end-->
     </header>
-    <section>
-
-    </section>
+    <main>
+        <div class="container-fluid silver-sand-bg">
+            <div class="row">
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover.jpg"
+                        alt="portrait photo of kendrick lamar">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/cortez.jpg"
+                        alt="kendirck lamar in all black with nike cortez shoes">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover-3.jpg"
+                        alt="kendrick lamar standing against a brick wall background">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/damn-tour-element.jpg"
+                        alt="kendrick lamar standing on stage in black and white">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/damn-tour-blur.jpg"
+                        alt="kendrick lamar on stage with red lights in background">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/damn-tour-crowd-grey.jpg"
+                        alt="crowd at kendrick lamar concert">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/damn-tour-backstage.jpg"
+                        alt="kendrick lamar standing against a brick wall background in black and white">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/murals.jpg"
+                        alt="kendrick lamar crouching in his highschool gym with platinum plaque">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/bredren.jpg"
+                        alt="photo of kendrick lamar and peer J.cole">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover-2.jpg"
+                        alt="black and white phto of kendrick lamar">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/kenny-beach.jpg"
+                        alt="kendrick lamar at the beach">
+                </div>
+                <div class="col-md-3">
+                    <img class="photo-gallery" src="assets/images/momma.jpg"
+                        alt="text conversation between kendrick and his mother showing her positive response to his album">
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Social links footer Start-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
@@ -117,7 +164,16 @@
                 </a>
             </div>
         </div>
+        <!-- Social links footer End-->
     </footer>
+    <!-- jQuery library - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
