Added content and css for Videos page

--- a/photos.html
+++ b/photos.html
@@ -68,55 +68,54 @@
     <main>
         <div class="container-fluid silver-sand-bg">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover.jpg"
                         alt="portrait photo of kendrick lamar">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/cortez.jpg"
                         alt="kendirck lamar in all black with nike cortez shoes">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover-3.jpg"
                         alt="kendrick lamar standing against a brick wall background">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/damn-tour-element.jpg"
                         alt="kendrick lamar standing on stage in black and white">
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/damn-tour-blur.jpg"
                         alt="kendrick lamar on stage with red lights in background">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/damn-tour-crowd-grey.jpg"
                         alt="crowd at kendrick lamar concert">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/damn-tour-backstage.jpg"
                         alt="kendrick lamar standing against a brick wall background in black and white">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/murals.jpg"
                         alt="kendrick lamar crouching in his highschool gym with platinum plaque">
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/bredren.jpg"
                         alt="photo of kendrick lamar and peer J.cole">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover-2.jpg"
                         alt="black and white phto of kendrick lamar">
                 </div>
-                <div class="col-md-3">
-                    <img class="photo-gallery" src="assets/images/kenny-beach.jpg"
-                        alt="kendrick lamar at the beach">
+                <div class="col-md-6 col-lg-3 photo-container">
+                    <img class="photo-gallery" src="assets/images/kenny-beach.jpg" alt="kendrick lamar at the beach">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6 col-lg-3 photo-container">
                     <img class="photo-gallery" src="assets/images/momma.jpg"
                         alt="text conversation between kendrick and his mother showing her positive response to his album">
                 </div>
