--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
 <body>
     <header>
         <!-- Navbar Start-->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
@@ -74,9 +74,68 @@
         </div>
         <!-- Hero image end-->
     </header>
-    <section>
-
-    </section>
+    <main>
+        <div class="container-fluid silver-sand-bg">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 ">
+                    <h3 class="subtitle-1">WHO IS KENDRICK LAMAR?</h3>
+                    <p class="general-content">
+                        Kendrick Lamar Duckworth, who performs as Kendrick Lamar, was born in Compton, California, on
+                        June 17, 1987. After writing stories as a child, he put to music some lyrics about the rough
+                        Compton streets he grew up on. He rapped under the name K-Dot, releasing a series of
+                        increasingly popular mix tapes, which brought him to the attention of hip-hop super-producer Dr.
+                        Dre. Lamar's debut major-label recording, good kid, m.A.A.d City, was released to great acclaim
+                        and impressive sales for an up-and-coming recording artist. He continued to receive accolades
+                        for his 2015 album, To Pimp a Butterfly, and his 2017 follow-up, DAMN.; both won Grammys for
+                        Best Rap Album, while DAMN. also made history as the first of its genre to earn a Pulitzer
+                        Prize.
+                    </p>
+                </div>
+                <div class="col-lg-4 about-picture-container">
+                    <img class="about-picture" src="assets/images/kendrick-lamar-best-rap-album-grammys.jpg"
+                        alt="kendrick at the grammys winning best rap album award">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid spanish-grey-bg">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 ">
+                    <h3 class="subtitle-1">BACKGROUND AND EARLY LIFE</h3>
+                    <p class="general-content">
+                        Kendrick Lamar Duckworth (who dropped his last name to perform as Kendrick Lamar) was born in
+                        Compton, California, on June 17, 1987. His parents had moved to Compton from Chicago to escape
+                        the city's gang culture, although Lamar's father had been associated with the notorious Gangster
+                        Disciples gang. As the 1980s crack trade and West Coast gang presence increased, Lamar grew up
+                        around precarious street activity, but he seemed more influenced than harmed by it. He was a
+                        good student who enjoyed writing, first stories and poems, and then lyrics.
+                    </p>
+                </div>
+                <div class="col-lg-4 about-picture-container">
+                    <img class="about-picture" src="assets/images/compton.jpg" alt="picture of compton blvd">
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 ">
+                    <p class="general-content">
+                        Lamar's family was directly touched by the violence of the streets, yet he remained thoughtful
+                        and soft-spoken, ever the keen observer, even as a child. He adopted the moniker K-Dot and began
+                        performing his lyrics as a rapper. At age 16, in 2003, he circulated a mix tape called Youngest
+                        Head Nigga in Charge, which drew a lot of interest in his native Southern California and beyond.
+                        The project was enough to get Lamar a record deal with Top Dawg Entertainment, a respected
+                        California independent label and feeder to major labels. He went on to release two other
+                        acclaimed mix tapes, Training Day (2005) and C4 (2009), steadily working with other
+                        up-and-coming West Coast rappers like Jay Rock, Ab-Soul and Schoolboy Q. Lamar and these other
+                        performers eventually formed their own rap collective, Black Hippy.
+                    </p>
+                </div>
+                <div class="col-lg-4 about-picture-container">
+                    <img class="about-picture" src="assets/images/kendrick-lamar-studio.jpg"
+                        alt="kendrick lamar relaxing in studio">
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Social links footer Start-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
@@ -118,6 +177,7 @@
             </div>
         </div>
     </footer>
+    <!-- Social links footer End-->
 </body>
 
 </html>
