Added content and css styling to contact page

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,12 @@
 <body>
     <header>
         <!-- Navbar Start-->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
@@ -75,9 +75,86 @@
         </div>
         <!-- Hero image end-->
     </header>
-    <section>
+    <main>
+        <div class="container-fluid silver-sand-bg">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="subtitle-1 rep-label">REPRESENTATION</h3>
+                </div>
+            </div>
 
-    </section>
+            <div class="row">
+                <div class="col-sm-6 col-md-3">
+                    <h4 class="subtitle-2">LABEL</h4>
+                    <p>
+                        Top Dog Entertainment<br>
+                        info@txdxe.com<br>
+                        123-456-7890<br>
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <h4 class="subtitle-2">MANAGEMENT</h4>
+                    <p>
+                        Top Dog Entertainment<br>
+                        punch@txdxe.com<br>
+                        123-456-7890<br>
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <h4 class="subtitle-2">BOOKING</h4>
+                    <p>
+                        Top Dog Entertainment<br>
+                        booking@txdxe.com<br>
+                        123-456-7890<br>
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <h4 class="subtitle-2">PRESS</h4>
+                    <p>
+                        Top Dog Entertainment<br>
+                        press@txdxe.com<br>
+                        123-456-7890<br>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid spanish-grey-bg">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h4 class="subtitle-2">SOCIAL</h4>
+                    <a target="_blank" href="https://www.facebook.com/kendricklamar">
+                        <i class="fab fa-facebook"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
+                    <a target="_blank" href="https://www.instagram.com/kendricklamar/">
+                        <i class="fab fa-instagram"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>
+                    <a target="_blank" href="https://twitter.com/kendricklamar?lang=en">
+                        <i class="fab fa-twitter"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>
+
+                </div>
+                <div class="col-sm-6">
+                    <h4 class="subtitle-2">STREAMING</h4>
+                    <a target="_blank" href="https://open.spotify.com/artist/2YZyLoL8N0Wb9xBt1NhZWg">
+                        <i class="fab page-tags fa-spotify"></i>
+                        <span class="sr-only">Spotify</span>
+                    </a>
+                    <a target="_blank" href="https://music.apple.com/gb/artist/kendrick-lamar/368183298">
+                        <i class="fab fa-apple"></i>
+                        <span class="sr-only">Apple Music</span>
+                    </a>
+                    <a target="_blank" href="https://www.youtube.com/user/KendrickLamarVEVO">
+                        <i class="fab fa-youtube"></i>
+                        <span class="sr-only">Youtube</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Social links footer Start-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
@@ -118,7 +195,9 @@
                 </a>
             </div>
         </div>
+
     </footer>
+    <!-- Social links footer End-->
 </body>
 
 </html>
