Added content and css styling to tour page.

--- a/tour.html
+++ b/tour.html
@@ -33,12 +33,12 @@
 <body>
     <!-- Navbar Start-->
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
@@ -74,9 +74,70 @@
         </div>
         <!-- Hero image end-->
     </header>
-    <section>
-
-    </section>
+    <main>
+        <div class="container-fluid silver-sand-bg">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <h3 class="subtitle-1 rep-label">CURRENT TOUR DATES</h3>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <!-- Credit ID= 3 Start -->
+                    <div class="history-items">
+                        <div class="timeline-item" data-dates="FEB 07">
+                            <h5 class="subtitle-1">DUBLIN - 3ARENA</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 09">
+                            <h5 class="subtitle-1">MANCHESTER - MANCHESTER ARENA</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 11">
+                            <h5 class="subtitle-1">GLASGOW - THE SSE HYDRO</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 12">
+                            <h5 class="subtitle-1">LONDON - THE O2</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 13">
+                            <h5 class="subtitle-1">LONDON - THE O2</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 15">
+                            <h5 class="subtitle-1">FRANKFURT - FESTHALLE</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 22">
+                            <h5 class="subtitle-1">COLOGNE - LANXESS ARENA</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 23">
+                            <h5 class="subtitle-1">AMSTERDAM - ZIGGO DOME</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 25">
+                            <h5 class="subtitle-1">PARIS - ACCORHOTELS ARENA</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="FEB 27">
+                            <h5 class="subtitle-1">ANTWERP - SPORTPALEIS</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="MAR 01">
+                            <h5 class="subtitle-1">COPENHAGEN - ROYAL ARENA</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="MAR 02">
+                            <h5 class="subtitle-1">OSLO TELENOR - ARENA</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="MAR 03">
+                            <h5 class="subtitle-1">STOCKHOLM - ERICSSON GLOBE</h5>
+                        </div>
+                        <div class="timeline-item" data-dates="MAR 05">
+                            <h5 class="subtitle-1">BERLIN - MERCEDES-BENZ ARENA</h5>
+                        </div>
+                    </div>
+                    <!-- Credit ID= 3 End -->
+                </div>
+                <div class="col-md-4 justify-content-center">
+                    <img class="album-covers" src="assets/images/kenny-tour-red.jpg"
+                        alt="Kendrick Lamar’s performance at the 2018 Grammy awards" />
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Social links footer Start-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
@@ -118,6 +179,7 @@
             </div>
         </div>
     </footer>
+    <!-- Social links footer End-->
 </body>
 
 </html>
